// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should render cloudIcon when the description includes the word cloud 1`] = `
<div>
  <img
    className="Icon-logo"
    src="https://vignette.wikia.nocookie.net/farmville/images/5/57/Puffy_Cloud-icon.png/revision/latest?cb=20121010151231"
  />
</div>
`;

exports[`Icon should render fogIcon when the description includes the word fog 1`] = `
<div>
  <img
    className="Icon-logo"
    src="http://icongal.com/gallery/download/43079/256/png"
  />
</div>
`;

exports[`Icon should render mixtIcon when the description includes a different word 1`] = `
<div>
  <img
    className="Icon-logo"
    src="https://images.onlinelabels.com/images/clip-art/Anonymous/Anonymous_simple_weather_symbols_13.png"
  />
</div>
`;

exports[`Icon should render snowIcon when the description includes the word snow) 1`] = `
<div>
  <img
    className="Icon-logo"
    src="http://www.free-icons-download.net/images/blue-snow-icon-38706.png"
  />
</div>
`;

exports[`Icon should render sunIcon when the description includes the word sun 1`] = `
<div>
  <img
    className="Icon-logo"
    src="http://www.pngmart.com/files/3/Sun-PNG-Photos.png"
  />
</div>
`;

exports[`Icon should render windIcon when the description includes the word wind 1`] = `
<div>
  <img
    className="Icon-logo"
    src="http://moziru.com/images/wind-clipart-weather-symbol-11.png"
  />
</div>
`;

exports[`Icon should show render rainIcon when the description includes the word rain 1`] = `
<div>
  <img
    className="Icon-logo"
    src="http://icons.iconarchive.com/icons/large-icons/large-weather/256/rain-icon.png"
  />
</div>
`;
